# AlphaZeroForHnefatafl

./: .gitignore  Cargo.toml  README.md  loss_graph_script.py  main.py  mcts_performance.csv  pyproject.toml  wrapper.pkl
duel_log/: results.txt
python_part/: taflNNet.py
python_part/azh/: NeuralNet.py  NeuralNetNotUsed.py  __init__.py
rust_part/src/: build.rs  duel.rs  legacy_mcts  legacylib  lib.rs  main.rs  mcts.rs  mcts_cmp.rs  mcts_par.rs  mcts_performance_test.rs  mcts_test.rs  self_play.rs  support.rs  test.rs
rust_part/src/hnefgame/: bitfield.rs  error.rs  gamenotused.rs  mod.rs  pieces.rs  play.rs  preset.rs  rules.rs  tiles.rs  utils.rs
rust_part/src/hnefgame/board/: geometry.rs  state.rs
src/: main.py  main.rs  mcts.rs  mctsNotUsed.rs
src/azhnefatafl/: NeuralNet.py  __init__.py  azhnefatafl-0.1.0-cp311-cp311-win_amd64.whl  config.py  taflNNet.py  test.py  utils.py
train_examples/: 1033_02.02.25.npz  1036_02.02.25.npz  1039_02.02.25.npz  1135_02.02.25.npz  1140_02.02.25.npz  1142_02.02.25.npz  1143_02.02.25.npz  1144_02.02.25.npz  1145_02.02.25.npz  1201_02.02.25.npz  1202_02.02.25.npz  1203_02.02.25.npz  1210_02.02.25.npz  1211_02.02.25.npz  1212_02.02.25.npz  1213_02.02.25.npz  1214_02.02.25.npz  1215_02.02.25.npz  1216_02.02.25.npz  1217_02.02.25.npz  1227_02.02.25.npz  1228_02.02.25.npz  1229_02.02.25.npz  1230_02.02.25.npz  1232_02.02.25.npz  1233_02.02.25.npz  1234_02.02.25.npz  1427_02.02.25.npz  1428_02.02.25.npz  1429_02.02.25.npz  1432_02.02.25.npz  1434_02.02.25.npz  1435_02.02.25.npz  1439_02.02.25.npz  1544_02.02.25.npz
(+3 files in other folders)
