[package]
name = "azhnefatafl"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = "0.13.1"
rand = "0.9.0"
tch = "0.18.1"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
numpy = "0.23.0"
ndarray = "0.16.1"
ctrlc = "3.4.5"
termion = "4.0.3"

[[bin]]
name = "main"
path = "./rust_part/src/main.rs"

[[bin]]
name = "test"
path = "./rust_part/src/test.rs"

[lib]
name = "azhnefatafl"
path = "./rust_part/src/lib.rs"
crate-type = ["cdylib"]
