[package]
name = "azhnefatafl"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = "0.13.1"
rand = "0.8.5"
tch = "0.18.1"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
numpy = "0.23.0"
ndarray = "0.16.1"
threadpool = "1.8.1"
rv = "0.18.0"
egui = "0.31.0"
eframe = "0.31.0"
chrono = "0.4.39"

[[bin]]
name = "main"
path = "./rust_part/src/main.rs"

[[bin]]
name = "mcts_performance_test"
path = "./rust_part/src/mcts_performance_test.rs"

[[bin]]
name = "duel"
path = "./rust_part/src/duel.rs"

[lib]
name = "azhnefatafl"
path = "./rust_part/src/lib.rs"
crate-type = ["cdylib"]
